# Insurance-AI

./: .env  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt
Evaluation/: eval.py  eval_summary.csv  results.json
utils/: pdf_processor.py  rag_chain.py  vector_store.py
